--- a/PorFinAgenda/src/main/webapp/resources/css/style.css
+++ b/PorFinAgenda/src/main/webapp/resources/css/style.css
@@ -11,8 +11,8 @@ Author: Surjith S M
    
 body {
   font-family: 'Roboto', sans-serif; 
-  background: url(../images/bb.jpg) no-repeat;
-  	background-size: cover;
+  background: url(../images/b2.jpeg) no-repeat;
+  	 background-size: cover;
   	}
   
 h1 {
