--- a/PorFinAgenda/src/main/webapp/resources/css/otro.css
+++ b/PorFinAgenda/src/main/webapp/resources/css/otro.css
@@ -15,7 +15,7 @@ body{
 	font-size: 14px;
 	color: #FFFFFF;
     	
-    background: url(../images/b4.jpg) no-repeat;
+    background: url(../images/ttt.jpg) no-repeat;
   	background-size: cover;
 }
 
